--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,117 @@
-.fitContent{
-    width: fit-content;
-}
-.error{
-    color: red;
-}
+    .fitContent{
+        width: fit-content;
+    }
+    .error{
+        color: red;
+    }
 
-/*style for the table */
-.tbl{
-    background-color: darkgray;
-    margin-left: 40px;
+    /*style for the table */
+    .tbl{
+        background-color: darkgray;
+        margin-left: 40px;
+    }
+    .tbl tr:nth-child(odd){
+        background-color: #f6f6f6;
+    }
+    .tbl tr:nth-child(even){
+        background-color: bisque;
+    }
+    .tbl tr td, th{
+        padding: 5px;
+    }
+    .frminline{
+        display: inline;
 }
-.tbl tr:nth-child(odd){
-    background-color: #f6f6f6;
-}
-.tbl tr:nth-child(even){
-    background-color: bisque;
-}
-.tbl tr td, th{
-    padding: 5px;
-}
-.frminline{
-    display: inline;
-}
+    .container{
+                  width: 100%;
+                  margin: 0 auto;
+                  background-image: url("10.jpg");
+              }
+   .container img{
+                  width: 30%;
+                  height: 50%;
+
+
+              }
+
+
+   .main{
+                  width: 100%;
+                  overflow: hidden;
+
+              }
+
+  .image img{
+                  width: 100%;
+
+              }
+  .detail{
+                  width: 100%;
+                  float: right;
+                  text-align: center;
+              }
+  .title{
+                  background-color: white;
+                  font-size: 25px;
+                  line-height: 30px;
+                  margin-right: 1000px;
+
+                  font-weight: bold;
+                  color: pink;
+              }
+  .detail{
+                  padding-left: 15px;
+                  box-sizing: border-box;
+              }
+  .des{
+                  color: red;
+                  font-size: 18px;
+                  padding-left: 10px;
+                  padding-top: 10px;
+                  font-weight: normal;
+              }
+
+   .list{
+                  width: 100%;
+                  padding-top: 10px;
+              }
+              .item{
+                  width: 25%;
+                  float: left;
+                  padding: 5px;
+                  box-sizing: border-box;
+              }
+              .iimage img{
+                  width: 100%;
+                  height : 50%;
+              }
+
+
+              .nav{
+                  width: 100%;
+                  height: 50px;
+                  background-color: pink;
+                  color: pink;
+              }
+              .nav ul{
+                  margin: 0;
+                  padding: 0;
+                  list-style: none;
+              }
+              .nav a{
+                  color:whitesmoke;
+                  font-size: 30px;
+                  text-decoration: none;
+                  line-height: 50px;
+                  padding: 0 15px;
+                  display: block;
+              }
+              .nav li{
+                  float: left;
+              }
+              .nav a:hover{
+                  color: #792323;
+              }
+              .nav li:hover{
+                  background-color:#DCF4F6;
+              }
